// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-dao-ops e2e tests should ignore tx with checkpoint reward change event on wrong contract 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process block with low deposit executor balance 1`] = `
Finding {
  "addresses": [],
  "alertId": "LOW-DEPOSIT-EXECUTOR-BALANCE",
  "description": "Balance of deposit executor (0xa22d223e732a5dcf4ff4529aa9a135293b7258fe) is 0.4926 ETH. This is extremely low!",
  "labels": [],
  "metadata": {},
  "name": "⚠️ Low deposit executor balance (Lido on Polygon)",
  "protocol": "ethereum",
  "severity": 4,
  "source": {},
  "timestamp": 2023-12-31T00:00:00.000Z,
  "type": 2,
  "uniqueKey": "",
}
`;

exports[`agent-dao-ops e2e tests should process tx with polygon checkpoint reward change 1`] = `
Finding {
  "addresses": [],
  "alertId": "STMATIC-CHEKPOINT-REWARD-UPDATE",
  "description": "Change 41.50%, 
new reward: 71795, 
old reward: 50739",
  "labels": [],
  "metadata": {},
  "name": "ℹ Polygon checkpoint reward was changed",
  "protocol": "ethereum",
  "severity": 4,
  "source": {},
  "timestamp": 2023-12-31T00:00:00.000Z,
  "type": 2,
  "uniqueKey": "",
}
`;

exports[`agent-dao-ops e2e tests should process tx with pooled MATIC delegation 1`] = `
Finding {
  "addresses": [],
  "alertId": "STMATIC-CONTRACT-POOLED-MATIC-DELEGATED",
  "description": "Pooled MATIC was delegated to validators. Delegated amount 2.1M MATIC remained pooled 3 wei
Protocol is balanced ✅",
  "labels": [],
  "metadata": {
    "args": "2109054805956318468376665,3",
  },
  "name": "✅ stMATIC: Pooled MATIC delegated",
  "protocol": "ethereum",
  "severity": 1,
  "source": {},
  "timestamp": 2023-12-31T00:00:00.000Z,
  "type": 4,
  "uniqueKey": "",
}
`;

exports[`agent-dao-ops e2e tests should process tx with rewards distribution 1`] = `
Finding {
  "addresses": [],
  "alertId": "STMATIC-CONTRACT-REWARDS-DISTRIBUTED",
  "description": "Rewards for stMATIC was distributed. Rewards amount 1051.76 MATIC
Protocol is balanced ✅",
  "labels": [],
  "metadata": {
    "args": "1051759040557383259680",
  },
  "name": "✅ stMATIC: Rewards distributed",
  "protocol": "ethereum",
  "severity": 1,
  "source": {},
  "timestamp": 2023-12-31T00:00:00.000Z,
  "type": 4,
  "uniqueKey": "",
}
`;
